# arboric

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  action.yml  config.example.yaml  pyproject.toml  requirements.txt  test_endpoints.sh
.claude/: settings.local.json
.github/workflows/: README.md  lint.yml  publish.yml  test-action.yml  test.yml
arboric/: __init__.py  autopilot.py  cli.py  grid_oracle.py
arboric/api/: __init__.py  dependencies.py  main.py  utils.py
arboric/api/models/: __init__.py  requests.py
arboric/api/routes/: config.py  fleet.py  forecast.py  history.py  optimize.py  receipt.py  status.py
arboric/cli/: __init__.py  export.py  main.py
arboric/core/: __init__.py  autopilot.py  config.py  constraints.py  grid_oracle.py  history.py  models.py
arboric/integrations/: __init__.py  electricity_maps.py  watttime.py
arboric/receipts/: __init__.py  exceptions.py  models.py  pdf_generator.py  receipt_template.html  service.py  signing.py
site/: index.html  receipt-preview.html
tests/: __init__.py  test_autopilot.py  test_constraints.py  test_export.py  test_grid_oracle.py  test_history.py  test_models.py  test_parity.py
tests/test_api/: __init__.py  conftest.py  test_fleet_endpoint.py  test_forecast_endpoint.py  test_health.py  test_optimize_endpoint.py
tests/test_receipts/: __init__.py  conftest.py  test_models.py  test_pdf_generator.py  test_service.py  test_signing.py
